--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -32,3 +32,7 @@
 "planck":
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
+
+"Kuo-Shih":
+  - firstname: ["Tseng"]
+    url: https://sites.google.com/site/kuoshihtseng/
