--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -33,6 +33,6 @@
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
 
-"Kuo-Shih":
-  - firstname: ["Tseng"]
+"Tseng":
+  - firstname: ["Kuo-Shih"]
     url: https://sites.google.com/site/kuoshihtseng/
