--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,3 @@
-"Tseng":
-  - firstname: ["Kuo-Shih", K-.S.]
+"tseng":
+  - firstname: ["Kuo-Shih", "K-.S."]
     url: https://sites.google.com/site/kuoshihtseng/
